[project]
name = "twilio-whatsapp-mcp"
version = "0.1.0"
description = "MCP server for sending and managing WhatsApp messages via Twilio Content Templates"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
twilio-whatsapp-mcp = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
